--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,5 @@
-body{
-    color:red;
-}
-h1{
-    color: blue;
-}
-h2{
-    color:green;
-}
-#lib-header{
-    color:grey;
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
-.para{
-    color: pink;
+body{
+    font-family: 'Montserrat', sans-serif;
 }
