--- a/styles.css
+++ b/styles.css
@@ -43,3 +43,14 @@ hr{
 }
 
 /**look into BEM naming convention for css**/
+
+/** lists **/
+
+.list-non-bullet {
+    list-style:none;
+}
+
+.list-iteam-inline{
+    display: inline;
+    padding: 0rem 0.5rem;
+}
