--- a/styles.css
+++ b/styles.css
@@ -30,16 +30,15 @@ hr{
 }
 
 .link-primary {
-    background-color: var 
-    (--primary-color);
+    background-color: var(--primary-color);
     border-radius: 0.5rem;
-    color: white
+    color: whitesmoke
 }
 .link-secondary {
     color:var(--primary-color);
     border-radius: 0.5rem;
-    border: 1px solid var
-    (--primary-color);
+    border: 1px solid var(--primary-color); 
+    /* background-color: blue; */
 }
 
 /**look into BEM naming convention for css**/
